--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .html5-logo{
     width: 10px;
-    margin: 3% 3%;
+    margin: 3%;
     font-size: 27px;
 }
 .header-text{
@@ -35,7 +35,7 @@ body{
     font-size: 27px;
 }
 
-.post-img img{
+img{
     width: 460px;
     height: 340px;
 }
